I am going to fix the broken layout of the DS board by removing conflicting CSS grid properties.

--- a/myproject/users/static/css/ds_board.css
+++ b/myproject/users/static/css/ds_board.css
@@ -7,8 +7,6 @@ body {
 }
 
 #ds-board-container {
-    display: grid;
-    grid-template-columns: 1fr 3fr;
     gap: 25px;
     padding: 25px;
     background-color: #ffffff;
